
public Enum CriterioUso {
  VIAJE,
  ENTRE_CASA,
  PLAYA,
  ...
}