
public interface Propuesta {

  public void aceptar(Guardarropas unGuardarropa);
  public void deshacer(Guardarropas unGuardarropa);

}